--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bevy = { version = "0.12.1", features = [
     "bevy_render",
     "png",
 ], default-features = false }
+# bevy="0.12.1"
 bevy_prototype_lyon = { path = "./third_party/bevy_prototype_lyon" }
 bevy-inspector-egui = "0.21.0"
 rand = "0.8.5"
