--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,13 @@ edition = "2021"
 #     "bevy_render",
 #     "png",
 # ], default-features = false }
-bevy="0.12.1"
+bevy = "0.12.1"
 bevy_prototype_lyon = { path = "./third_party/bevy_prototype_lyon" }
 bevy-inspector-egui = "0.21.0"
 rand = "0.8.5"
+
+[build-dependencies]
+embed-resource = "1.6.3"
 
 [profile.release]
 opt-level = "s"
